2001-11-14  Glynn Foster  <glynn.foster@sun.com>

	* gnome-ditem-edit.c:
	* gnome-hint.c: 

	Fix the GNOME_BOILERPLATE stuff.

2001-11-08  Mark McLoughlin  <mark@skynet.ie>

	* gnome-desktop-item.c: (gnome_desktop_item_launch): don't
	dump core if exec is NULL.

2001-11-08  Seth Nickell  <snickell@stanford.edu>

	* gnome-desktop-item.c:

	Stop including gnome-vfs-mime.h, use gnome-vfs-mime-util.h instead.

2001-11-07  Mark McLoughlin  <mark@skynet.ie>

	* gnome-desktop-item.c: (gnome_desktop_item_new_from_uri),
	(gnome_desktop_item_set_location): use gnome_vfs_file_info_new
	and gnome_vfs_file_info_unref.

Wed Nov 07 00:52:47 2001  George Lebl <jirka@5z.com>

	* gnome-desktop-item.[ch]: Port to GnomeVFS.  Compiles, if
	  it actually works is a different question altogether.  However
	  it should still work and shouldn't break anything.  (Breaks
	  get/set_location api since that's uri and not filename now)

2001-10-25  Mark McLoughlin  <mark@skynet.ie>

	* gnome-hint.h: sync gnome_hint_new def.

2001-10-25 Stephen Browne <stephen.browne@sun.com?

	* gnome-desktop/gnome-hint.c
	* gnome-desktop/test-hint.c

	Some cleanup plus added support for a show at startup checkbox

2001-10-22  Stephen Browne  <stephen.browne@sun.com>

        * gnome-desktop/Makefile.am:
        * gnome-desktop/gnome-hint.c:
        * gnome-desktop/gnome-hint.h:
        * gnome-desktop/test-hint.c:

        Added a gnome_hint widget to libgnome-desktop

2001-10-11  Alex Larsson  <alexl@redhat.com>

	* gnome-desktop-item.c (ditem_execute, gnome_desktop_item_launch):
	Convert app launching to new api. Not tested yet, but at least
	compiles.

2001-10-10  Alex Larsson  <alexl@redhat.com>

	* gnome-desktop-item.c (escape_string_and_dup,
	escape_string_and_dup):
	Don't write past end of string.

2001-10-09  Havoc Pennington  <hp@redhat.com>

	* gnome-desktop-item.c (gnome_desktop_item_new): create the hash
	table here, since we use it and assume it's always non-nul
