@@ -1,3 +1,10 @@
+2001-11-16  Glynn Foster  <glynn.foster@sun.com>
+
+	* gnome-desktop-item.c: Fix up to work. I spent my whole day on
+	something like a 10 line fix. This is just depressing. It's still
+	broken with the encoding but at least it gets pretty little icons
+	back on the panel again.
+
 2001-11-14  Glynn Foster  <glynn.foster@sun.com>
 
 	* gnome-ditem-edit.c:
